--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <img src="joia_cara-1.jpg-1.jpg" alt="">  
-  <h1>loja de venda</h1>
+
+    <header class= "cabecalho">
+        <img classe= "cabecanho-imagem" src="images.png" alt="logo da joanheria">
+        <ul class= "cabecalho-lista">
+            <li class="cabecalho-lista-item">entrar</li>
+            <li class="cabecalho-lista-item">escolher compras</li>
+        </ul>
+       
+    </header>
+
 </body>
 </html>
