--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
+<body>
     <header class= "cabecalho">
         <img classe= "cabecanho-imagem" src="images.png" alt="logo da joanheria">
         <ul class= "cabecalho-lista">
             <li class="cabecalho-lista-item">entrar</li>
             <li class="cabecalho-lista-item">escolher compras</li>
         </ul>
-       
     </header>
-
+ <section class="compras">
+<h2 class="joanheria-titulo">sobre compras</h2>
+    </section>
 </body>
+
 </html>
