--- a/index.html
+++ b/index.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>loja girl</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>"iportante" estudos sobre cardiologia.   
-          <img src="coracao.webp" alt="">
-        </h1>cardiologia: E um estudo para nós estudantes que querem saber sobre o coraçao.
-        <h1>
-            <img src="864b4bc9c2e2ff7862ed09d5c8ec6623.gif" alt="">
-        </h1>a cardiologia é uma especialização de área de medicina que cuida do diagnostico e
-         tratamento de todas as doenças do coração e ao sistema circulatório
-         <h1>o que anatomia
-            <img src="download.jpeg" alt="">
-         </h1>
-    </header>
-
+    <section class="conteudo-principal">
+        <h2 class="titulo-principal">loja girl</h2>
+        <div class="botoes">
+            <button class="botao">moda adulta femenina</button>
+            <button class="botao">moda infantil </button>
+        </div>
+    </section>
 </body>
 </html>
