--- a/index.html
+++ b/index.html
@@ -10,8 +10,20 @@
     <section class="conteudo-principal">
         <h2 class="titulo-principal">loja girl</h2>
         <div class="botoes">
-            <button class="botao">moda adulta femenina</button>
-            <button class="botao">moda infantil </button>
+            <button class="botao">moda adulta </button>
+            <img src="images.jpeg" alt="" width="270px">
+             <img src="90bf8e0fb1b58c7f34788b5d5db24972.jpg" alt="" width="270px">
+            <img src="13adc6169ed427f294384179e409bff2.jpg" alt="" width="270px">
+
+            <button class="botao">moda adolecente</button>
+            <img src="calca-destruida-rasgada-em-buracos-moda-feminina.jpg" alt="">
+             <img src="cb4c4292748a04b5a81e8cdaf5324e08.jpg" alt=""width=280 height="450"> 
+             <img src="macacao-preto-com-alcinhas-e-faixa_121478_301_1.webp" alt="" height="450">
+
+            <button class="botao">moda infantil</button>
+            <img src="57c2e1cb4b.webp" alt="" width="270px" height="300"> 
+            <img src="br-11134207-7r98o-ln4xr2u35ooza6.jpeg" alt="" width="270px" height="300"> 
+            <img src="bec0d281b9e51b28eb3723a89ae662b4.jpg" alt="" width="250px" height="300">
         </div>
     </section>
 </body>
