--- a/index.html
+++ b/index.html
@@ -7,23 +7,52 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="conteudo-principal">
-        <h2 class="titulo-principal">loja girl</h2>
-        <div class="botoes">
-            <button class="botao">moda adulta </button>
-            <img src="images.jpeg" alt="" width="270px">
-             <img src="90bf8e0fb1b58c7f34788b5d5db24972.jpg" alt="" width="270px">
-            <img src="13adc6169ed427f294384179e409bff2.jpg" alt="" width="270px">
-
-            <button class="botao">moda adolecente</button>
-            <img src="calca-destruida-rasgada-em-buracos-moda-feminina.jpg" alt="">
-             <img src="cb4c4292748a04b5a81e8cdaf5324e08.jpg" alt=""width=280 height="450"> 
-             <img src="macacao-preto-com-alcinhas-e-faixa_121478_301_1.webp" alt="" height="450">
-
-            <button class="botao">moda infantil</button>
-            <img src="57c2e1cb4b.webp" alt="" width="270px" height="300"> 
-            <img src="br-11134207-7r98o-ln4xr2u35ooza6.jpeg" alt="" width="270px" height="300"> 
-            <img src="bec0d281b9e51b28eb3723a89ae662b4.jpg" alt="" width="250px" height="300">
+    <header>
+        <h2 class="titulo-principal">Loja Girl</h2>
+    </header>
+    <h1>Moda Adulta</h1>
+    <section class="linha">
+        <div class="a">
+        <img class="b" src="Sc1da8e63e6174614b4fbe435a6382d7d9.jpg_640x640Q90.jpg_.webp" alt="260" >
+        </div>
+        <div class="a">
+        <img class="b" src="images.jpeg" alt="260" >
+        </div>
+        <div class="a">
+        <img class="b" src="90bf8e0fb1b58c7f34788b5d5db24972.jpg" alt="260" >
+        </div>
+        <div class="a">
+        <img class="b" src="13adc6169ed427f294384179e409bff2.jpg" alt="260" >
+        </div>
+    </section>
+    <h1>Moda Adolescente</h1>
+    <section class="linha">
+        <div class="a">
+        <img class="b" src="calca-destruida-rasgada-em-buracos-moda-feminina.jpg" alt="260" >
+        </div>
+        <div class="a">
+        <img class="b" src="cb4c4292748a04b5a81e8cdaf5324e08.jpg" alt="260" >
+        </div>
+        <div class="a">
+        <img class="b" src="macacao-preto-com-alcinhas-e-faixa_121478_301_1.webp" alt="260" >
+        </div>
+        <div class="a">
+        <img class="b" src="13adc6169ed427f294384179e409bff2.jpg" alt="260" >
+        </div>
+    </section>
+    <h1>Moda Infantil</h1>
+    <section class="linha">
+        <div class="a">
+        <img class="b" src="57c2e1cb4b.webp" alt="260" >
+        </div>
+        <div class="a">
+        <img class="b" src="br-11134207-7r98o-ln4xr2u35ooza6.jpeg" alt="260" >
+        </div>
+        <div class="a">
+        <img class="b" src="bec0d281b9e51b28eb3723a89ae662b4.jpg" alt="260" >
+        </div>
+        <div class="a">
+        <img class="b" src="13adc6169ed427f294384179e409bff2.jpg" alt="260" >
         </div>
     </section>
 </body>
