--- a/index.html
+++ b/index.html
@@ -1,59 +1,54 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>loja girl</title>
-    <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h2 class="titulo-principal">Loja Girl</h2>
-    </header>
-    <h1>Moda Adulta</h1>
+    <section class="conteudo-principal">
+        <h2 class="titulo-principal">loja girl</h2>
+        <div class="botoes">
+
+        </div>
+    <h1>MODA ADULTA| moda Adolescente | moda infantil</h1>
     <section class="linha">
         <div class="a">
-        <img class="b" src="Sc1da8e63e6174614b4fbe435a6382d7d9.jpg_640x640Q90.jpg_.webp" alt="260" >
+        <img class="b" src="Sc1da8e63e6174614b4fbe435a6382d7d9.jpg_640x640Q90.jpg_.webp" alt="260" p>R$431,99</p>
         </div>
         <div class="a">
-        <img class="b" src="images.jpeg" alt="260" >
+        <img class="b" src="images.jpeg" alt="260" p> R$289,00</p>
         </div>
         <div class="a">
-        <img class="b" src="90bf8e0fb1b58c7f34788b5d5db24972.jpg" alt="260" >
+        <img class="b" src="90bf8e0fb1b58c7f34788b5d5db24972.jpg" alt="260" p>R$255,00</p>
         </div>
         <div class="a">
-        <img class="b" src="13adc6169ed427f294384179e409bff2.jpg" alt="260" >
+        <img class="b" src="13adc6169ed427f294384179e409bff2.jpg" alt="260" p>R$130,00</p  >
         </div>
     </section>
-    <h1>Moda Adolescente</h1>
+    <h1>moda adulta| MODA ADOLESCENTE | moda infantil </h1>
     <section class="linha">
         <div class="a">
-        <img class="b" src="calca-destruida-rasgada-em-buracos-moda-feminina.jpg" alt="260" >
+        <img class="b" src="calca-destruida-rasgada-em-buracos-moda-feminina.jpg" alt="260" p>R$445,00</p>
         </div>
         <div class="a">
-        <img class="b" src="cb4c4292748a04b5a81e8cdaf5324e08.jpg" alt="260" >
+        <img class="b" src="cb4c4292748a04b5a81e8cdaf5324e08.jpg" alt="260" p>R$380,00</p>
         </div>
         <div class="a">
-        <img class="b" src="macacao-preto-com-alcinhas-e-faixa_121478_301_1.webp" alt="260" >
+        <img class="b" src="macacao-preto-com-alcinhas-e-faixa_121478_301_1.webp" alt="260" p>R$540,87</p>
         </div>
         <div class="a">
-        <img class="b" src="13adc6169ed427f294384179e409bff2.jpg" alt="260" >
+        <img class="b" src="estilo-y2k-o-que-significa-a-sigla-e-quais-as-caracteristicas-13.jpg" alt="260" p>R$369,00</p>
         </div>
     </section>
-    <h1>Moda Infantil</h1>
+    <h1>Moda adulta| moda adolescente | MODA INFANTIL</h1>
     <section class="linha">
         <div class="a">
-        <img class="b" src="57c2e1cb4b.webp" alt="260" >
+        <img class="b" src="57c2e1cb4b.webp" alt="260"  p>R$221,77</p>
         </div>
         <div class="a">
-        <img class="b" src="br-11134207-7r98o-ln4xr2u35ooza6.jpeg" alt="260" >
+        <img class="b" src="br-11134207-7r98o-ln4xr2u35ooza6.jpeg" alt="260"  p>R$232,43</p>
         </div>
         <div class="a">
-        <img class="b" src="bec0d281b9e51b28eb3723a89ae662b4.jpg" alt="260" >
+        <img class="b" src="bec0d281b9e51b28eb3723a89ae662b4.jpg" alt="260"  p>R$300,00</p>
         </div>
         <div class="a">
-        <img class="b" src="13adc6169ed427f294384179e409bff2.jpg" alt="260" >
+        <img class="b" src= 'S27049c769e634ae598a6a1e7c522c21dO.jpg_640x640Q90.jpg_.webp' alt="260"  p>R$644,77</p>
         </div>
     </section>
 </body>
-</html>
